fixed a big in obj.take() and greatly simplified the take() algorithm. removed take(inst) as the caller can simply use take(cInt) with the inst.dom().c() coefficient being passed.